# ros2_ground_segmentation

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
include/ros2_composable_template/: composable_sample.hpp
include/ros2_ground_segmentation/: line_fit_ground_segmentation.hpp  point_type.h  ray_ground_segmentation.hpp
include/ros2_ground_segmentation/linefit/: bin.h  linefit_params.h  linefit_seg.h  segment.h
include/ros2_ground_segmentation/ray/: ray_ground_params.h  ray_ground_seg.h
launch/: composable_sample.launch.xml  linefit_ground_segmentation.launch.xml  ray_ground_segmentation.launch.xml
src/: composable_sample.cpp  line_fit_ground_segmentation.cpp  linefit_ground_segmentation.cpp  ray_ground_segmentation.cpp
src/linefit/: bin.cpp  linefit_seg.cpp  segment.cpp
src/ray/: ray_ground_seg.cpp
